gruntify, clean up css/js

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Gleneden Cavachon &amp; Cavanese</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="main.css">
-  <script src="js/prefixfree.min.js"></script>
+  
+  <link rel="stylesheet" href="css/style.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -319,11 +318,7 @@
   </div><!-- content container -->
 </footer>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="node_modules/masonry-layout/dist/masonry.pkgd.min.js"></script>
-<script src="js/imagesloaded.pkgd.js"></script>
-<script src="node_modules/readmore-js/readmore.min.js"></script>
-<script src="js/myscript.js"></script>
+
+<script src="js/script.min.js"></script>
 </body>
 </html>
